@@ -65,6 +65,7 @@ LanguageTool Change Log
      the default="off" attribute (unless they have been enabled explicitly)
     -StringTools.isAlphabetic() has been removed as it was a workaround for Java 6
      which is not supported anymore
+    -ContractionSpellingRule.isDictionaryBasedSpellingRule() now returns false
 
 -GUI:
     -Improved configuration dialog
